changes some messages

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -87,7 +87,7 @@
                             <img src="/images/full logo.png" alt="PayFair Logo" class="title-image">
                             <p class="Header">Ride Easy, Pay Fairly</p>
                             <p class="description">
-                                PayFair is a fare calculating app designed for commuters across the Philippines. It provides accurate fare estimates for various transportation modes, helping users plan their trips efficiently and budget their travel costs with ease.
+                                PayFair is a fare calculating app designed for commuters across Metro Manila. It provides fare estimates for various transportation modes, helping users plan their trips efficiently and budget their travel costs with ease.
                             </p>
                         </div>
                     </div>
@@ -105,7 +105,7 @@
                             <img src="/images/full logo.png" alt="PayFair Logo" class="title-image">
                             <p class="Header">Ride Easy, Pay Fairly</p>
                             <p class="description">
-                                A Fare Calculating App designed for commuters across the Philippines
+                                A Fare Calculating App designed for commuters across the Metro Manila
                             </p>
                             <a href="/ffDashboard"><button class="CalculateNow">Calculate Now</button></a>
                         </div>
@@ -121,9 +121,9 @@
                     style="background-color: #dedfe1; background-image: url('/images/bg3.png'); background-size: cover; background-position: center;">
                         <div class="content">
                             <img src="/images/full logo.png" alt="PayFair Logo" class="title-image">
-                            <p class="Aheader2">Your fare buddy, anywhere in the Philippines</p>
+                            <p class="Aheader2">Your fare buddy, anywhere in the Metro Manila</p>
                             <p class="description">
-                                A Fare Calculating App designed for commuters across the Philippines
+                                A Fare Calculating App designed for commuters across the Metro Manila
                             </p>
                         </div>
                     </div>
